Reorganized a bit of backend. Started work on new timeline concept.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,82 +1,86 @@
 <div class="navigation-bar"></div>
-<div class="container">
-  <div class="social-bar offset-1 column-2">
+<div class="container container-responsive">
+  <div class="social-bar">
     <a href="http://twitter.com/pvm" class="social-icon twitter"></a>
-    <a href="http://dribbble.com/pvm" class="social-icon dribble"></a>
+    <a href="http://dribbble.com/pvm" class="social-icon dribbble"></a>
   </div>
 
-  <div class="home-hero">
-    <h3 class="offset-1 column-10">Design shapes the world. We must imagine and invent the future. Design can be engineered, but must be crafted. Education is neccesary for the sustainability of the cycle.</h3>
-    <div class="offset-1 column-8">
-      <p>It’s true. Design shapes the world. This should discuss how evolutionary leaps are common, but to make progress we must envision a future, place ourselves there, and help pull people forward. Progress is made when people ask why something is so, and why it isn’t better. From that questioning, change is sparked.</p>
+  <div class="adventures">
+    <!-- <div class="timeline-container"></div> -->
+    <div class="intro">
+      <h3>Adventures</h3>
+      <p>If you consider it, design is a way of life.</p>
+      <p>The designer must take it upon themselves to discover the root of a problem. They must consider a problem from all sorts of perspectives, lest they admit weakness in their solution. They that their work is never done, for people always change, and design must adapt to people. Therefore, a designer could (and should) be defined by the cumulation of their experiences both within the context of exploring problems and their solutions, and in the context of discovering the world and its beauty.</p>
 
-      <p>Craft can be engineered. Design is nothing magical. It’s a process that can be refined over practice. The best artisans in the world, whether business tycoons in NYC, lace makers in Burano, or manufacturers in Japan have the experience to distill their art into craft.</p>
-
-      <p>Education is our duty.  Not only in our design, but in our craft. We must pass down what we learn to the future, so they can build on our shoulders. Building communities creates strong relationships that promote education and sharing, which serves to advance humanity</p>
-    </div>
-  </div>
-
-  <div class="home-explore">
-    <h2 class="offset-1 column-10">Craft is Balance</h2>
-
-    <div class="column-7 right-align" style="margin-bottom:4em;">
-      <h4>Explore</h4>
-      <p>This should discuss how evolutionary leaps are common, but to make progress we must envision a future, place ourselves there, and help pull people forward. Progress is made when people ask why something is so, and why it isn’t better. From that questioning, change is sparked.</p>
+      <p>Below you can sample a few of my recent perspectives.</p>
+      <p>Each one has its tale. Each one carries its lessons. Each one changed the world &mdash; at least in some small way &mdash; by critically exploring it.</p>
     </div>
 
-    <div class="column-4 right-align">
-      <img src="http://placehold.it/300x190" width="300px" height ="190px" />
-    </div>
+    <ol class="portfolio">
+      <li class="portfolio-item">
+        <div class="item-overview">
+          <h4><a href="http://getkale.com">Kale</a></h4>
+          <h5>Product design / management &middot; Front-end dev &middot; iOS Client &middot; Rails APIs</h5>
+          <p>Celebrate your food to eat healthier. Kale helps people track and share their meals.</p>
+        </div>
 
-    <div class="column-7 right-align">
-      <h4>Discover</h4>
-      <p>This should discuss how evolutionary leaps are common, but to make progress we must envision a future, place ourselves there, and help pull people forward. Progress is made when people ask why something is so, and why it isn’t better. From that questioning, change is sparked.</p>
-    </div>
-    <div class="column-4 right-align">
-      <img src="http://placehold.it/300x190" width="300px" height ="190px" />
-    </div>
-  </div><!-- end .home-explore -->
+        <ul class="product-showcase">
+          <li class="product-screenshot">
+            <img src="/assets/kale-hero-iphones.png" width="100%" class="hero-image" />
+            <h6>Fig. K-1</h6>
+            <p>Mobile designs for Kale iOS app.</p>
+          </li>
 
-  <div class="home-adventures">
-    <h2 class="offset-1">Adventures</h2>
+          <li class="product-screenshot">
+            <img src="/assets/kale-hero-web.png" width="100%" />
+            <h6>Fig. K-2</h6>
+            <p>Landing pages, web app, and email templates.</p>
+          </li>
+        </ul>
+      </li><!-- end .portoflio-item -->
 
-    <p class="offset-1 column-8" style="margin-bottom:4em;">It’s true. Design shapes the world. This should discuss how evolutionary leaps are common, but to make progress we must envision a future, place ourselves there, and help pull people forward. Progress is made when people ask why something is so, and why it isn’t better. From that questioning, change is sparked.</p>
 
-    <div class="adventure healthy-kale">
-      <div class="offset-1 column-4 adventure-description">
-        <h3>Kale</h3>
-        <p>Celebrate your food to eat healtheir. Kale helps people track and share their meals. </p>
-        <p class="skills-provided">Product design &middot; iOS development &middot; Rails API</p>
-      </div>
-      <div class="column-6">
-        <img src="/assets/home/adventure-kale.png" />
-      </div>
-    </div><!-- end .adventure -->
+      <li class="portfolio-item">
+        <div class="item-overview">
+          <h4><a href="http://corhq.com">Cor</a></h4>
+          <h5>Product design &middot; Front-end dev &middot; PHP CI Integration</h5>
+          <p>Health is no longer a perk, it’s a priority. Cor is an employee wellness engagement platform.</p>
+        </div>
 
-    <div class="adventure fitfeud-cor">
-      <div class="offset-1 column-4 adventure-description">
-        <h3>Cor</h3>
-        <p>Health is no longer a perk, it’s a priority. Cor is an employee wellness engagement platform.</p>
-        <p class="skills-provided">Product design &middot; front-end dev &middot; CI Integration</p>
-      </div>
-      <div class="column-6">
-        <img src="/assets/home/adventure-cor.png" />
-      </div>
-    </div><!-- end .adventure -->
+        <ul class="product-showcase">
+          <li class="product-screenshot">
+            <img src="/assets/cor-hero-web.png" width="100%" class="hero-image" />
+            <h6>Fig. C-1</h6>
+            <p>Responsive web/mobile designs for Cor.</p>
+          </li>
 
-    <div class="adventure entrepreneurs-fosterly">
-      <div class="offset-1 column-4 adventure-description">
-        <h3>Foster.ly</h3>
-        <p>Supporting entrepreneurs in the DC, MD, and VA area. Connect, learn, and share resources.</p>
-        <p class="skills-provided">Product design &middot; Front-end dev &middot; Rails APIs</p>
-      </div>
-      <div class="column-6">
-        <img src="/assets/home/adventure-fosterly.png" />
-      </div>
-    </div><!-- end .adventure -->
+          <li class="product-screenshot">
+            <img src="/assets/cor-hero-responsives.png" width="100%" />
+            <h6>Fig. C-2</h6>
+            <p>Landing page, dashboards, daily emails, etc.</p>
+          </li>
+        </ul>
+      </li><!-- end .portoflio-item -->
 
-  </div>
+      <li class="portfolio-item">
+        <div class="item-overview">
+          <h4><a href="http://foster.ly">Foster.ly</a></h4>
+          <h5>Product design &middot; Front-end dev &middot; Rails APIs</h5>
+          <p>Supporting entrepreneurs in the DC, MD, and VA area. Connect, learn, and share resources.</p>
+        </div>
 
+        <ul class="product-showcase">
+          <li class="product-screenshot">
+            <img src="/assets/fosterly-hero-web.png" width="100%" class="hero-image" />
+            <h6>Fig. F-1</h6>
+            <p>Responsive web/mobile designs for Fosterly.</p>
+          </li>
+        </ul>
+      </li><!-- end .portoflio-item -->
+
+
+    </ol><!-- end .portfolio -->
+  </div><!-- end .adventures -->
 </div><!-- end .container -->
 <footer>
   
