--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,3 +1,442 @@
-// Place all the styles related to the Pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+$main_red: #e52900;
+$dark_red: #9B2208;
+$body_background: #fafafa;
+
+$font-stack: "Proxima Nova", "Helvetica Neue", "Helvetica", sans-serif;
+
+body {
+  font-family: $font-stack;
+  // font-family: "ff-tisa-web-pro", "georgia", serif;
+  color:#555555;
+  font-size: large;
+  background:$body_background;
+}
+
+h1, h2, h3, h4 { color:#303030; }
+
+h1 { color: $main_red; }
+h2 { text-transform:uppercase; margin:0; padding:1em 0; font-weight:100; color:$main_red; font-size:1.75em; }
+h3 { font-size:36px; font-weight:500; margin:2em 0; }
+h4 { margin:0 0 .5em; text-transform:uppercase; font-weight:500; }
+
+p { font-size:large; line-height:1.5; color: #555555;}
+
+.navigation-bar {
+  width:100%;
+  background:$main_red;
+  height:8px;
+}
+
+.social-bar {
+  display: inline-block;
+  background: lighten($main_red, 45%);
+}
+
+.social-icon {
+  display:inline-block;
+  width:42px;
+  height:42px;
+  margin:0;
+  margin:.25em .75em;
+  opacity: .6;
+   -webkit-transition: opacity .2s ease-in-out;
+      -moz-transition: opacity .2s ease-in-out;
+        -o-transition: opacity .2s ease-in-out;
+           transition: opacity .2s ease-in-out;
+}
+
+.social-icon:hover { 
+  opacity:1; 
+   -webkit-transition: opacity .2s ease-in-out;
+      -moz-transition: opacity .2s ease-in-out;
+        -o-transition: opacity .2s ease-in-out;
+           transition: opacity .2s ease-in-out;
+}
+
+.twitter { background:url('/assets/twitter.png') no-repeat; }
+.twitter:hover { opacity:.9; }
+.dribbble { background:url('/assets/dribbble.png') no-repeat; }
+
+// Trying to roll my own grid system for consistent experience
+
+.container {
+  width:960px;
+  margin:0 auto;
+  box-sizing: border-box;
+}
+
+.container-responsive {
+  width:72%;
+}
+
+.right-align { text-align:right; }
+
+.column-1   { width:80px;  }
+.column-2   { width:160px; }
+.column-3   { width:240px; }
+.column-4   { width:320px; }
+.column-5   { width:400px; }
+.column-6   { width:480px; }
+.column-7   { width:560px; }
+.column-8   { width:640px; }
+.column-9   { width:720px; }
+.column-10  { width:800px; }
+.column-11  { width:880px; }
+.column-12  { width:960px; }
+
+.column-1,
+.column-2,
+.column-3,
+.column-4,
+.column-5,
+.column-6,
+.column-7,
+.column-8,
+.column-9,
+.column-10,
+.column-11,
+.column-12, {
+  display:inline-block;
+  vertical-align: top;
+}
+
+.offset-1   { margin-left: 80px; }
+.offset-2   { margin-left: 160px; }
+.offset-3   { margin-left: 240px; }
+.offset-4   { margin-left: 320px; }
+.offset-5   { margin-left: 400px; }
+.offset-6   { margin-left: 480px; }
+.offset-7   { margin-left: 560px; }
+.offset-8   { margin-left: 640px; }
+.offset-9   { margin-left: 720px; }
+.offset-10  { margin-left: 800px; }
+.offset-11  { margin-left: 880px; }
+
+
+
+/*  ------------------------------------------
+      Home Page Rev. 1
+    ------------------------------------------ */    
+.home-hero        { margin-bottom:10em; }
+.home-explore     { position:relative; margin-bottom:10em;}
+.home-explore h2  { margin-bottom:2em; }
+.home-explore h4  { color:#666; }
+.home-explore p   { color:#777; -webkit-font-smoothing: antialiased; }
+
+
+.adventure { 
+  box-sizing: border-box;
+  background:white;
+  border:1px solid rgba(0,0,0,.2);
+  
+  border-radius:4px;
+  margin-bottom: 4em;
+  max-height: 352px;
+
+     -moz-transition: -moz-box-shadow 0.2s;
+  -webkit-transition: -webkit-box-shadow 0.2s;
+       -o-transition: -o-box-shadow 0.2s;
+          transition: box-shadow 0.2s;
+
+}
+
+.healthy-kale.adventure:hover { box-shadow:0 0 4px rgba(0,255,0,.3); }
+.fitfeud-cor.adventure:hover { box-shadow:0 0 4px rgba(255,0,0,.3); }
+.entrepreneurs-fosterly.adventure:hover { box-shadow:0 0 4px rgba(0,255,255,.3); }
+
+.adventure-description {
+  padding-top:2.5em;
+}
+
+.adventure h3 { 
+  margin:0; 
+  font-size:4em; 
+  font-weight:500; 
+  color:#444; 
+}
+
+.adventure p { margin-top:0; }
+
+.adventure img { 
+  margin-left:61px; 
+  border-top-right-radius:4px;
+  border-bottom-right-radius:4px;
+}
+
+.skills-provided {
+  font-size: .75em;
+  color:#999;
+}
+
+/*  ------------------------------------------
+      Adventure Rev. 1 Page
+    ------------------------------------------ */
+
+.my-adventures-r1 {    
+
+    .adventures-timeline {
+      background:url("/assets/timeline-spine.png") repeat-y top center;
+      height:auto;
+      border-top:4px solid #e52900;
+      padding:0;
+      list-style: none;
+    }
+
+    .year {
+      font-size: 18px;
+      color:#999;
+      padding-top:.25em;
+    }
+
+    .inner-year { border-top:4px solid rgba(0,0,0,.1); width:48%; }
+
+    .timeline-item {
+      display:block;
+      margin: 2em auto 4em;
+      position: relative;
+    }
+
+    .timeline-point {
+      border-radius: 50%;
+      width:10px;
+      height:10px;
+      border:3px solid $main_red;
+      background: white;
+      position: absolute;
+      top:0;
+      left:48.6%;
+      z-index: 3;
+    }
+
+    .timeline-point:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 13px;
+      left: -4px;
+      width: 0;
+      height: 0;
+      border-color: transparent transparent white transparent;
+      border-style: solid;
+      border-width: 10px;
+    }
+
+    .timeline-point:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 12px;
+      left: -4px;
+      width: 0;
+      height: 0;
+      border-color: transparent transparent #ccc transparent;
+      border-style: solid;
+      border-width: 10px;
+    }
+
+    .timeline-container {
+      background: white;
+      border: 1px solid rgba(0, 0, 0, .1);
+      border-radius: 2px;
+      padding: .75em;
+      z-index: 1;
+      position: relative;
+      top: 1.9em;
+    }
+
+
+
+    .timeline-brief {
+      text-align: right;
+      float:left;
+      width:70%;
+
+      h4 { 
+        font-size: 24px;
+        font-weight: 500;
+        color:#e52900;
+        text-transform: none;
+
+        
+        a { text-decoration:none; }
+        a:visited { color: inherit; }
+        a:hover { text-decoration:underline; color: $dark_red; }
+        
+      }
+
+      h5 {
+        font-size:12px;
+        color:#999;
+        font-weight: 500;
+      }
+
+      p {
+        font-size: 15px;
+      }
+    }
+
+    .timeline-showcase {
+      float:left;
+      width:22%;
+      padding-left:8%;
+      display: inline-block;
+      vertical-align: top;
+    }
+
+    .timeline-preview {
+      display: block;
+      width:100%;
+      min-height: 36px;
+      box-shadow:0 1px 3px rgba(0,0,0,.2);
+      -webkit-transition: all .3s ease-in-out;
+    }
+
+    .timeline-preview:hover {
+      box-shadow:0 1px 4px rgba(0,0,0,.3);
+      cursor: pointer;
+    }
+
+    .timeline-description {
+      display: none; // Will show up using JS on click
+      background: $body_background;
+      padding:.25em 1em 1em;
+      margin-top: 3em;
+      font-size:18px;
+      color: #999;
+
+      h6 { font-size:1.2em; margin:0 0 .5em; font-weight:100; color:#222;}
+      img { max-height:480px; }
+    }
+
+    .description-trigger-open,
+    .description-trigger-close {
+      position: absolute;
+      bottom: .5em;
+      left: .5em;
+      background: $body_background;
+      border-radius: 3px;
+      padding: .2em .4em .1em;
+      text-decoration: none;
+      color: white;
+      font-size: 12px;
+      border:1px solid rgba(0,0,0,.2);
+    }
+
+    .description-trigger-open { 
+      border:1px solid $main_red; 
+      background: $main_red;
+
+      &:hover {
+        border-color:rgba(0,0,0,.25);
+        background-color: $main_red;
+        background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%), $main_red; /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.1))), $main_red; /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%), $main_red; /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%), $main_red; /* Opera 11.10+ */
+        background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%), $main_red; /* IE10+ */
+        background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%), $main_red; /* W3C */
+      }
+    }
+    .description-trigger-close { 
+      color: #aaa; 
+
+      &:hover {
+        border-color:rgba(0,0,0,.25);
+        background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.1))); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%); /* IE10+ */
+        background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%); /* W3C */
+      }
+    }
+
+    .pressed {
+      box-shadow:inset 0 1px 4px rgba(0,0,0,.3);
+    }
+
+    .pressed:hover { box-shadow: inherit; }
+
+}
+
+
+/*  ------------------------------------------
+      Adventure Page Rev. 2
+    ------------------------------------------ */
+
+.adventures { padding-bottom:4em; }
+
+.timeline-container {
+  width:6%;
+  position:fixed;
+  top:5em;
+  right:1em;
+  
+  background:url("/assets/timeline-spine.png") repeat-y top center;
+  height:auto;
+  border-top:4px solid #e52900;
+  min-height: 400px;
+}
+
+.intro {
+  width:76%;
+  margin:10em 0 15em;
+}
+
+.portfolio { list-style:none; margin:0; padding:0;}
+
+.item-overview {
+  border:1px solid rgba(0,0,0,.15);
+  padding:1em 4%;
+  border-radius:3px;
+  background:white;
+
+  h4 { font-size: 2.2em; color:#333; text-transform:none; margin:0;}
+  h4 a { color:inherit; text-decoration:none; }
+
+  h5 { font-weight:100; color:#999; font-size:.8em; margin:1em 0;}
+  p { margin-bottom:0; font-size:1.2em;}
+}
+
+.product-showcase {
+  margin: 0;
+  padding:0;
+  list-style: none;
+  text-align: right;
+
+  h6 { margin:2em 0 0; font-size:1em; color: #666; font-weight:100;}
+  p { margin:0; font-size:1em; color:#999; font-weight:100;}
+}
+
+.product-screenshot {
+  margin:10em 0;
+}
+
+.hero-image { max-width:800px; }
+
+
+
+@media only screen and (max-width: 35em) {
+  
+  .container-responsive { width:96%; }
+
+  .intro { width:100%; margin-top:0;}
+
+  .timeline-container {
+    width:30%;
+    margin:0 auto;
+    display: none;
+    z-index: 3;
+  }
+
+  .item-overview {
+
+    h4 { font-size:1.5em; }
+    h5 {font-size:.65em; }
+    p {font-size:.8em;}
+  }
+
+  .product-showcase { text-align:center; }
+}
+
+
