--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-30913790-1']);
+  _gaq.push(['_setDomainName', 'paulmederos.com']);
   _gaq.push(['_trackPageview']);
 
   (function() {
