--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -12,7 +12,7 @@ body {
   background:$body_background;
 }
 
-h1, h2, h3, h4 { color:#66392C; }
+h1, h2, h3, h4 { color:#333; }
 
 h1 { color: $main_red; }
 h2 { text-transform:uppercase; margin:0; padding:1em 0; font-weight:100; color:$main_red; font-size:1.75em; }
